--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -119,7 +119,7 @@ QTabBar::tab:left:only-one, QTabBar::tab:right:only-one {
 }</string>
       </property>
       <property name="currentIndex">
-       <number>5</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab_4">
        <attribute name="title">
@@ -458,6 +458,12 @@ QLineEdit:focus { background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1,
             </item>
             <item row="7" column="1" colspan="6">
              <widget class="QTableWidget" name="stock_table">
+              <property name="minimumSize">
+               <size>
+                <width>800</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="styleSheet">
                <string notr="true">QTableView {
 border: 1px solid black;
@@ -943,7 +949,7 @@ QComboBox::drop-down
            </widget>
           </item>
           <item row="6" column="2">
-           <widget class="QPushButton" name="button_fahrzeuge">
+           <widget class="QPushButton" name="cars_save_status_button">
             <property name="styleSheet">
              <string notr="true">QPushButton{
    background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
@@ -986,7 +992,7 @@ background-color: rgb(130, 152, 152);
            </widget>
           </item>
           <item row="3" column="4">
-           <widget class="QComboBox" name="combo_zustand">
+           <widget class="QComboBox" name="combo_status">
             <property name="styleSheet">
              <string notr="true">QComboBox
 {
@@ -1089,7 +1095,7 @@ QComboBox::drop-down
            </spacer>
           </item>
           <item row="5" column="0" colspan="5">
-           <widget class="QTextEdit" name="fahrzeug_textedit">
+           <widget class="QTextEdit" name="car_textedit">
             <property name="styleSheet">
              <string notr="true">QTextEdit {
 background-color: rgb(107, 109, 108);
@@ -2136,7 +2142,7 @@ background-color: rgb(130, 152, 152);
              <enum>QTabWidget::North</enum>
             </property>
             <property name="currentIndex">
-             <number>6</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="tab_6">
              <attribute name="title">
@@ -2146,7 +2152,7 @@ background-color: rgb(130, 152, 152);
               <item row="1" column="0" rowspan="2">
                <widget class="QTabWidget" name="tabWidget_2">
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>4</number>
                 </property>
                 <widget class="QWidget" name="tab_9">
                  <attribute name="title">
@@ -3777,7 +3783,7 @@ background-color: rgb(130, 152, 152);
                      </widget>
                     </item>
                     <item row="2" column="2">
-                     <widget class="QLineEdit" name="admin_material_speichern_barcode">
+                     <widget class="QLineEdit" name="admin_material_save_barcode">
                       <property name="styleSheet">
                        <string notr="true">QLineEdit{ background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #929394, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
 border: 1px inset darkgrey;
@@ -3793,7 +3799,7 @@ QLineEdit:focus { background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1,
                      </widget>
                     </item>
                     <item row="3" column="2">
-                     <widget class="QLineEdit" name="admin_material_speichern_anzahl">
+                     <widget class="QLineEdit" name="admin_material_save_number">
                       <property name="styleSheet">
                        <string notr="true">QLineEdit{ background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #929394, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
 border: 1px inset darkgrey;
@@ -3841,7 +3847,7 @@ QLineEdit:focus { background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1,
                      </widget>
                     </item>
                     <item row="5" column="2" colspan="2">
-                     <widget class="QTableWidget" name="admin_material_speichern_table">
+                     <widget class="QTableWidget" name="admin_material_save_table">
                       <property name="styleSheet">
                        <string notr="true">QTableView {
 border: 1px inset darkgrey;
@@ -3890,7 +3896,7 @@ text-align: center;
                      </widget>
                     </item>
                     <item row="6" column="2" colspan="2">
-                     <widget class="QPushButton" name="admin_material_speichern_button">
+                     <widget class="QPushButton" name="admin_material_save_button">
                       <property name="styleSheet">
                        <string notr="true">QPushButton{
    background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #565656, stop: 0.1 #525252, stop: 0.5 #4e4e4e, stop: 0.9 #4a4a4a, stop: 1 #464646);
@@ -3933,7 +3939,7 @@ background-color: rgb(130, 152, 152);
                      </widget>
                     </item>
                     <item row="4" column="2">
-                     <widget class="QComboBox" name="admin_material_speichern_combo">
+                     <widget class="QComboBox" name="admin_material_save_combo">
                       <property name="styleSheet">
                        <string notr="true">QComboBox
 {
@@ -8049,8 +8055,8 @@ background-color: rgb(130, 152, 152);
   <tabstop>delete_entry_btn</tabstop>
   <tabstop>clear_table_btn</tabstop>
   <tabstop>combo_rtw</tabstop>
-  <tabstop>combo_zustand</tabstop>
-  <tabstop>fahrzeug_textedit</tabstop>
+  <tabstop>combo_status</tabstop>
+  <tabstop>car_textedit</tabstop>
   <tabstop>mpg_Fahrzeuge_combo</tabstop>
   <tabstop>mpg_geraete_tabelle_fahrzeug</tabstop>
   <tabstop>mpg_user_geraete_barcode</tabstop>
@@ -8082,11 +8088,11 @@ background-color: rgb(130, 152, 152);
   <tabstop>admin_produkte_update</tabstop>
   <tabstop>admin_lager_fehlendes_material</tabstop>
   <tabstop>lager_bestellung</tabstop>
-  <tabstop>admin_material_speichern_barcode</tabstop>
-  <tabstop>admin_material_speichern_anzahl</tabstop>
-  <tabstop>admin_material_speichern_combo</tabstop>
-  <tabstop>admin_material_speichern_table</tabstop>
-  <tabstop>admin_material_speichern_button</tabstop>
+  <tabstop>admin_material_save_barcode</tabstop>
+  <tabstop>admin_material_save_number</tabstop>
+  <tabstop>admin_material_save_combo</tabstop>
+  <tabstop>admin_material_save_table</tabstop>
+  <tabstop>admin_material_save_button</tabstop>
   <tabstop>admin_car_radio_identification</tabstop>
   <tabstop>admin_car_license_plate</tabstop>
   <tabstop>admin_car_town</tabstop>
